--- a/.github/workflows/manga_notifications.yml
+++ b/.github/workflows/manga_notifications.yml
@@ -27,7 +27,11 @@ jobs:
           sudo apt update  # Update the package list again after adding the repo
           apt-cache madison brave-browser  # Check for available versions
 
-      - name: Check Available Brave Versions
+      - name: Install curl and add Brave Repository
         run: |
           sudo apt update
-          apt-cache madison brave-browser
+          sudo apt install -y curl
+          sudo curl -fsSLo /usr/share/keyrings/brave-browser-archive-keyring.gpg https://brave-browser-apt-release.s3.brave.com/brave-browser-archive-keyring.gpg
+          echo "deb [signed-by=/usr/share/keyrings/brave-browser-archive-keyring.gpg] https://brave-browser-apt-release.s3.brave.com/ stable main" | sudo tee /etc/apt/sources.list.d/brave-browser-release.list
+          sudo apt update  # Update the package list again after adding the repo
+          sudo apt install -y brave-browser=1.70.126  # Install the specific version of Brave
