--- a/.github/workflows/manga_notifications.yml
+++ b/.github/workflows/manga_notifications.yml
@@ -30,7 +30,7 @@ jobs:
       - name: Install ChromeDriver
         run: |
           wget https://storage.googleapis.com/chrome-for-testing-public/129.0.6668.100/linux64/chromedriver-linux64.zip
-          unzip chromedriver_linux64.zip
+          unzip chromedriver-linux64.zip
           sudo mv chromedriver /usr/local/bin/  # Move to a location in PATH
           sudo chmod +x /usr/local/bin/chromedriver  # Make it executable
           echo "Installed ChromeDriver version:"
