--- a/.github/workflows/manga_notifications.yml
+++ b/.github/workflows/manga_notifications.yml
@@ -31,7 +31,9 @@ jobs:
         run: |
           wget https://storage.googleapis.com/chrome-for-testing-public/129.0.6668.100/linux64/chromedriver-linux64.zip
           unzip chromedriver-linux64.zip
-          sudo mv chromedriver /usr/local/bin/  # Move to a location in PATH
-          sudo chmod +x /usr/local/bin/chromedriver  # Make it executable
-          echo "Installed ChromeDriver version:"
+          ls -l chromedriver-linux64/  # Optional: List contents to verify extraction
+          # mv chromedriver-linux64/chromedriver /desired/path/chromedriver
+          # sudo mv chromedriver /usr/local/bin/  # Move to a location in PATH
+          # sudo chmod +x /usr/local/bin/chromedriver  # Make it executable
+          # echo "Installed ChromeDriver version:"
           chromedriver --version  # Verify installation
