--- a/.github/workflows/manga_notifications.yml
+++ b/.github/workflows/manga_notifications.yml
@@ -18,6 +18,13 @@ jobs:
         with:
           python-version: '3.8'
 
+      - name: Restore chapter data cache
+        id: cache-data
+        uses: actions/cache@v2
+        with:
+          path: chapter_data.pkl
+          key: manga-tracker-cache
+
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
@@ -53,3 +60,11 @@ jobs:
       - name: Run Python Script
         run: |
           python3 demon.py
+
+      - name: Cache updated chapter data
+        uses: actions/cache@v2
+        with:
+          path: chapter_data.pkl
+          key: manga-tracker-cache
+          restore-keys: manga-tracker-cache
+
