--- a/.github/workflows/manga_notifications.yml
+++ b/.github/workflows/manga_notifications.yml
@@ -74,5 +74,5 @@ jobs:
           git config --local user.name "Kashishveda"  # Your name
           git add chapter_data.pkl
           git commit -m "Update manga chapters" || echo "No changes to commit"
-          git push https://x-access-token:${{ secrets.MY_GITHUB_TOKEN }}@github.com/Kashishveda/manga.git HEAD:master
+          git push https://x-access-token:${{ secrets.MY_GITHUB_TOKEN }}@github.com/Kashishveda/manga_selenium.git HEAD:master
 
